--- a/hr-payroll/pom.xml
+++ b/hr-payroll/pom.xml
@@ -47,8 +47,13 @@
 			<version>1.18.24</version>
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+		</dependency>
+
+	</dependencies>
 
 	<dependencyManagement>
 		<dependencies>
