--- a/eurekaserver/pom.xml
+++ b/eurekaserver/pom.xml
@@ -22,6 +22,11 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka-server</artifactId>
 			<version>1.4.7.RELEASE</version>
